@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<!-- 	$Header: /cvsroot/cl-cookbook/cl-cookbook/packages.html,v 1.3 2002/05/21 23:16:50 nhabedi Exp $	 -->
+<!-- 	$Header: /cvsroot/cl-cookbook/cl-cookbook/packages.html,v 1.4 2002/05/21 23:24:52 nhabedi Exp $	 -->
 <html> <head>
 <title>The Common Lisp Cookbook - Packages</title>
 <style type="text/css">
@@ -15,6 +15,8 @@ pre { margin-left:20px; background-color:#e0e0e0 }
 <h2>Contents</h2>
 
 <ul>
+<li><a href="http://www.flownet.com/gat/packages.pdf">&quot;The Complete Idiot's Guide to Common Lisp Packages&quot;</a><br>
+(by Erann Gat - external link to PDF file)
 <li><a href="#list">List all Symbols in a Package</a>
 </ul>
 
@@ -58,5 +60,5 @@ href="http://www.xanalys.com/software_tools/reference/HyperSpec/Body/06_a.htm"><
 <hr>
 <a href="license.html">Copyright</a> &copy; 2002 The Common Lisp Cookbook Project
 <address>http://cl-cookbook.sourceforge.net/</address>
-<br>$Header: $
+<br>$Header: /cvsroot/cl-cookbook/cl-cookbook/packages.html,v 1.4 2002/05/21 23:24:52 nhabedi Exp $
 </body> </html>
