@@ -1,3 +1,6 @@
+2003-07-01
+  Added link to Erann Gat's "Idiot's Guide"
+
 2003-06-02
   Fixed link to "Common Lisp Hints"
 
